[B]1.1.1[/B]
- Fixed: episodeguide url won't picked up sometimes

[B]1.1.0[/B]
- Added: support decimals in episode numbers for DVD ordering

[B]1.0.8[/B]
- Fixed: fallback to other image languages if preferred doesn't exist

[B]1.0.7[/B]
- Fixed: season thumbs