@@ -254,6 +254,9 @@
 			<RegExp input="$$8" output="&lt;rating&gt;\1&lt;/rating&gt;" dest="4+">
 				<expression>&lt;Rating&gt;([^&lt;]+)&lt;/Rating&gt;</expression>
 			</RegExp>
+			<RegExp input="$$1" output="&lt;runtime&gt;\1&lt;/runtime&gt;" dest="4+">
+				<expression>&lt;Runtime&gt;([^&lt;]+)&lt;/Runtime&gt;</expression>
+			</RegExp>
 			<expression noclean="1"/>
 		</RegExp>
 	</GetEpisodeDetails>
