@@ -1,3 +1,6 @@
+[B]1.2.0[/B]
+- Added: episode runtime scraping
+
 [B]1.1.1[/B]
 - Fixed: episodeguide url won't picked up sometimes
 
